Updated page TechDraw Workbench/de

--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -52,7 +52,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_PageDefault.svg&amp;filetimestamp=20240710132501&amp;.html" class="mw-file-description"><img src="../File/TechDraw_PageDefault.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_PageDefault.html" title="TechDraw PageDefault/de">Neues Zeichnungsblatt</a>: F&uuml;gt ein neues Zeichnungsblatt unter Verwendung der voreingestellten <a href="../de/TechDraw_Templates.html" title="TechDraw Templates/de">Vorlage</a> hinzu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_PageTemplate.svg&amp;filetimestamp=20241127175340&amp;.html" class="mw-file-description"><img src="../File/TechDraw_PageTemplate.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_PageTemplate.html" title="TechDraw PageTemplate/de">Neues Zeichnungsblatt aus Vorlage</a>: F&uuml;gt ein neues Zeichnungsblatt unter Verwendung einer frei w&auml;hlbaren <a href="../de/TechDraw_Templates.html" title="TechDraw Templates/de">Vorlage</a> hinzu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_FillTemplateFields.svg&amp;filetimestamp=20240708195027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FillTemplateFields.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_FillTemplateFields.html" title="TechDraw FillTemplateFields/de">Vorlagenfelder aktualisieren</a>: F&uuml;llt Vorlagenfelder automatisch mit Dokumentinformationen <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_RedrawPage.svg&amp;filetimestamp=20240710133133&amp;.html" class="mw-file-description"><img src="../File/TechDraw_RedrawPage.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_RedrawPage.html" title="TechDraw RedrawPage/de">Seite neu zeichnen</a>: Erzwingt eine Aktualisierung des ausgew&auml;hlten Zeichnungsblattes.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_RedrawPage.svg&amp;filetimestamp=20240710133133&amp;.html" class="mw-file-description"><img src="../File/TechDraw_RedrawPage.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_RedrawPage.html" title="TechDraw RedrawPage/de">Blatt neu zeichnen</a>: Erzwingt eine Aktualisierung des ausgew&auml;hlten Zeichnungsblattes.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_PrintAll.svg&amp;filetimestamp=20240710132618&amp;.html" class="mw-file-description"><img src="../File/TechDraw_PrintAll.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_PrintAll.html" title="TechDraw PrintAll/de">Alle Seiten drucken</a>: Druckt alle Zeichnungsbl&auml;tter eines Dokuments. <span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExportPageSVG.svg&amp;filetimestamp=20240708192017&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExportPageSVG.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExportPageSVG.html" title="TechDraw ExportPageSVG/de">Seite als SVG-Datei exportieren</a>: Speichert die aktuelle Seite als <a href="../de/SVG.html" title="SVG/de">SVG</a>-Datei.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExportPageDXF.svg&amp;filetimestamp=20240708191933&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExportPageDXF.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExportPageDXF.html" title="TechDraw ExportPageDXF/de">Seite als DXF-Datei exportieren</a>: speichert die aktuelle Seite als <a href="../de/DXF.html" title="DXF/de">DXF</a>-Datei.</li></ul>
@@ -291,12 +291,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111204821
+Cached time: 20260111204951
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.289 seconds
-Real time usage: 0.466 seconds
+CPU time usage: 0.334 seconds
+Real time usage: 0.546 seconds
 Preprocessor visited node count: 870/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
@@ -307,18 +307,18 @@ Unstrip post&#8208;expand size: 4462/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.707      1 -total
- 24.77%    7.357      1 Template:TechDraw_Tools_navi/de
- 18.93%    5.624      5 Template:VersionPlus/de
- 17.35%    5.155      1 Template:Userdocnavi/de
- 14.56%    4.324      2 Template:Navigation_menu_2
-  9.26%    2.752     25 Template:Version/de
-  8.00%    2.378      1 Template:TOCright
-  7.71%    2.290      2 Template:Docnav/de
-  6.37%    1.892      1 Template:KEY
+100.00%   34.975      1 -total
+ 31.41%   10.984      1 Template:TechDraw_Tools_navi/de
+ 16.53%    5.780      2 Template:Navigation_menu_2
+ 13.20%    4.616      5 Template:VersionPlus/de
+ 11.81%    4.132      2 Template:Docnav/de
+ 11.62%    4.065     25 Template:Version/de
+ 10.23%    3.578      1 Template:Userdocnavi/de
+  7.30%    2.555      1 Template:KEY
+  5.27%    1.843      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111204820 and revision id 1736151. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111204950 and revision id 1736159. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
