--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -469,11 +469,8 @@
 </td>
 <td colspan="3">Pomoc&iacute; kole&#269;ka my&scaron;i m&#367;&#382;ete p&#345;ibli&#382;ovat a oddalovat zobrazen&iacute;.
 <p>Alternativn&#283; podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
+</p><p>Nebo podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> a prav&eacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Or hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> and the right mouse button, then move the pointer.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td colspan="2">Hold the left mouse button, then move the pointer.
@@ -935,15 +932,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111204935
+Cached time: 20260111204958
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.292 seconds
-Real time usage: 0.434 seconds
-Preprocessor visited node count: 1509/1000000
-Post&#8208;expand include size: 72971/2097152 bytes
-Template argument size: 27906/2097152 bytes
+CPU time usage: 0.276 seconds
+Real time usage: 0.436 seconds
+Preprocessor visited node count: 1508/1000000
+Post&#8208;expand include size: 72934/2097152 bytes
+Template argument size: 27869/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -951,19 +948,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   65.061      1 -total
- 13.50%    8.784      8 Template:ASCII
-  7.48%    4.868      1 Template:Userdocnavi/cs
-  7.04%    4.581     69 Template:KEY
-  6.33%    4.120      1 Template:OpenSCAD_Navigation
-  6.25%    4.064      1 Template:SiemensNX_Navigation
-  5.55%    3.614      1 Template:Blender_Navigation
-  4.64%    3.019      1 Template:Touchpad_Navigation/cs
-  4.63%    3.010      1 Template:Gesture_Navigation
-  4.27%    2.779      2 Template:Docnav
+100.00%  112.092      1 -total
+ 20.64%   23.131      1 Template:Userdocnavi/cs
+  9.92%   11.116      8 Template:ASCII
+  6.21%    6.965      1 Template:Blender_Navigation
+  5.12%    5.735      9 Template:MenuCommand
+  5.11%    5.732      1 Template:Gesture_Navigation
+  4.95%    5.550      1 Template:SiemensNX_Navigation
+  4.55%    5.103      1 Template:Touchpad_Navigation
+  4.19%    4.692      1 Template:OpenSCAD_Navigation
+  4.17%    4.674      1 Template:SolidWorks_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204934 and revision id 1736157. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204957 and revision id 1736161. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
