--- a/wiki/de/TechDraw_Midpoints.html
+++ b/wiki/de/TechDraw_Midpoints.html
@@ -3,7 +3,7 @@
 <li><a href="../TechDraw_Midpoints.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw Midpoints (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_Midpoints.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Sommet au milieu (81% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_Midpoints.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Punti mediani (81% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_Midpoints.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Dodaj wierzcho&#322;ek punktu &#347;rodkowego (81% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_Midpoints.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj wierzcho&#322;ek punktu &#347;rodkowego (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_Midpoints.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1044;&#1086;&#1073;&#1072;&#1074;&#1080;&#1090;&#1100; &#1074;&#1077;&#1088;&#1096;&#1080;&#1085;&#1099; &#1087;&#1086; &#1094;&#1077;&#1085;&#1090;&#1088;&#1072;&#1084; &#1075;&#1088;&#1072;&#1085;&#1077;&#1081;" (50% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_Midpoints.html" class="mw-pt-progress mw-pt-progress--high" title="&#44592;&#49696;&#46020;&#47732; &#51473;&#44036;&#51216; (81% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
@@ -13,7 +13,6 @@
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -24,7 +23,7 @@
 <th class="ctOdd">Men&uuml;eintrag
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Knoten hinzuf&uuml;gen &rarr; Kantenmittelpunkte hinzuf&uuml;gen
+<td class="ctEven">TechDraw &rarr; Knoten hinzuf&uuml;gen &rarr; Kantenmittelpunkte
 </td></tr>
 <tr>
 <th class="ctOdd">Arbeitsbereich
@@ -53,7 +52,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
@@ -137,35 +135,35 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111151726
+Cached time: 20260111205020
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.078 seconds
-Real time usage: 0.230 seconds
-Preprocessor visited node count: 338/1000000
-Post&#8208;expand include size: 27772/2097152 bytes
-Template argument size: 10999/2097152 bytes
+Real time usage: 0.123 seconds
+Preprocessor visited node count: 337/1000000
+Post&#8208;expand include size: 27748/2097152 bytes
+Template argument size: 10975/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2238/5000000 bytes
+Unstrip post&#8208;expand size: 2243/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.711      1 -total
- 52.78%   24.126      1 Template:TechDraw_Tools_navi/de
- 35.26%   16.116      2 Template:Navigation_menu_2
-  8.31%    3.801      1 Template:Version/de
-  7.94%    3.628      1 Template:Clear
-  5.43%    2.481      1 Template:Userdocnavi/de
-  5.06%    2.311      1 Template:Code
-  4.73%    2.161      2 Template:Docnav/de
-  4.34%    1.985      1 Template:GuiCommand/de
-  2.78%    1.271      1 Template:Caption
+100.00%   26.005      1 -total
+ 23.06%    5.996      1 Template:TechDraw_Tools_navi/de
+ 18.62%    4.842      1 Template:Button
+ 12.16%    3.163      2 Template:Navigation_menu_2
+  8.27%    2.150      1 Template:Caption
+  7.81%    2.031      2 Template:Docnav/de
+  7.60%    1.976      1 Template:GuiCommand/de
+  7.48%    1.945      1 Template:MenuCommand
+  6.56%    1.706      1 Template:Userdocnavi/de
+  5.56%    1.446      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177743-0!canonical and timestamp 20260111151725 and revision id 1734655. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177743-0!canonical and timestamp 20260111205020 and revision id 1736163. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
