Created page with "|Rotate_view_text=Podržte levé tlačítko myši a přesuňte ukazatel."

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -471,10 +471,8 @@
 <p>Alternativn&#283; podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
 </p><p>Nebo podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> a prav&eacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td colspan="2">Hold the left mouse button, then move the pointer.
-
+</td>
+<td colspan="2">Podr&#382;te lev&eacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Alternatively, and when a sketch is in edit mode, hold the middle mouse button, then press and hold the right mouse button, then move the pointer.
 </p>
@@ -932,15 +930,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111204958
+Cached time: 20260111205024
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.276 seconds
-Real time usage: 0.436 seconds
-Preprocessor visited node count: 1508/1000000
-Post&#8208;expand include size: 72934/2097152 bytes
-Template argument size: 27869/2097152 bytes
+CPU time usage: 0.288 seconds
+Real time usage: 0.514 seconds
+Preprocessor visited node count: 1507/1000000
+Post&#8208;expand include size: 72881/2097152 bytes
+Template argument size: 27816/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -948,19 +946,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  112.092      1 -total
- 20.64%   23.131      1 Template:Userdocnavi/cs
-  9.92%   11.116      8 Template:ASCII
-  6.21%    6.965      1 Template:Blender_Navigation
-  5.12%    5.735      9 Template:MenuCommand
-  5.11%    5.732      1 Template:Gesture_Navigation
-  4.95%    5.550      1 Template:SiemensNX_Navigation
-  4.55%    5.103      1 Template:Touchpad_Navigation
-  4.19%    4.692      1 Template:OpenSCAD_Navigation
-  4.17%    4.674      1 Template:SolidWorks_Navigation
+100.00%  138.051      1 -total
+ 29.27%   40.407      1 Template:Userdocnavi/cs
+ 15.58%   21.507      1 Template:Touchpad_Navigation
+ 10.71%   14.787      1 Template:Navigation_menu_2
+  9.25%   12.764      1 Template:OpenSCAD_Navigation
+  7.34%   10.126      1 Template:Touchpad_Navigation/cs
+  7.28%   10.052      1 Template:VersionMinus
+  6.70%    9.254      1 Template:OpenInventor_Navigation
+  5.19%    7.161      8 Template:ASCII
+  2.68%    3.699      1 Template:SolidWorks_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111204957 and revision id 1736161. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205023 and revision id 1736165. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
