--- a/wiki/de/TechDraw_Midpoints.html
+++ b/wiki/de/TechDraw_Midpoints.html
@@ -55,7 +55,7 @@
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
-<p>Das Werkzeug <b>TechDraw Mittenpunkte</b> f&uuml;gt einer oder mehreren Kanten einen Hilfspunkt (<a href="../de/Glossary.html#Vertex" title="Glossary/de">Knoten</a>) auf halber L&auml;nge hinzu.
+<p>Das Werkzeug <b>TechDraw Mittenpunkte</b> f&uuml;gt einer oder mehreren Kanten einen <a href="../de/TechDraw_CosmeticVertex.html" title="TechDraw CosmeticVertex/de">Hilfspunkt</a> auf halber L&auml;nge hinzu.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticMidpoint_Sample.png&amp;filetimestamp=20190521120456&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticMidpoint_Sample.png" decoding="async" width="250" height="231" class="mw-file-element" data-file-width="384" data-file-height="355"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Hilfspunkte an Kantenmittenpunkten</p>
@@ -135,12 +135,12 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205020
+Cached time: 20260111205121
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.078 seconds
-Real time usage: 0.123 seconds
+CPU time usage: 0.084 seconds
+Real time usage: 0.287 seconds
 Preprocessor visited node count: 337/1000000
 Post&#8208;expand include size: 27748/2097152 bytes
 Template argument size: 10975/2097152 bytes
@@ -151,19 +151,19 @@ Unstrip post&#8208;expand size: 2243/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.005      1 -total
- 23.06%    5.996      1 Template:TechDraw_Tools_navi/de
- 18.62%    4.842      1 Template:Button
- 12.16%    3.163      2 Template:Navigation_menu_2
-  8.27%    2.150      1 Template:Caption
-  7.81%    2.031      2 Template:Docnav/de
-  7.60%    1.976      1 Template:GuiCommand/de
-  7.48%    1.945      1 Template:MenuCommand
-  6.56%    1.706      1 Template:Userdocnavi/de
-  5.56%    1.446      1 Template:Code
+100.00%   73.855      1 -total
+ 36.17%   26.717      1 Template:TechDraw_Tools_navi/de
+ 17.06%   12.599      2 Template:Docnav/de
+ 10.78%    7.963      1 Template:GuiCommand/de
+ 10.59%    7.824      2 Template:Navigation_menu_2
+ 10.00%    7.389      1 Template:Version/de
+  6.63%    4.899      1 Template:Userdocnavi/de
+  3.93%    2.903      1 Template:Code
+  3.11%    2.298      1 Template:Caption
+  2.80%    2.065      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177743-0!canonical and timestamp 20260111205020 and revision id 1736163. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177743-0!canonical and timestamp 20260111205120 and revision id 1736175. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
