--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -12,7 +12,7 @@
 <li><a href="../pt-br/Mouse_navigation.html" class="mw-pt-progress mw-pt-progress--med" title="Navega&ccedil;&atilde;o com mouse (24% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Mouse_navigation.html" class="mw-pt-progress mw-pt-progress--low" title="Navigarea &icirc;n 3 D Modelul de Mouse (2% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Mouse_navigation.html" class="mw-pt-progress mw-pt-progress--low" title="Mouse Model (1% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../bg/Mouse_navigation.html" class="mw-pt-progress mw-pt-progress--low" title="&#1057;&#1090;&#1080;&#1083; &#1085;&#1072; &#1088;&#1072;&#1073;&#1086;&#1090;&#1072; &#1089; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072; (1% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/Mouse_navigation.html" class="mw-pt-progress mw-pt-progress--med" title="&#1053;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1074; 3D &#1087;&#1088;&#1086;&#1089;&#1090;&#1088;&#1072;&#1085;&#1089;&#1090;&#1074;&#1077; (23% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Mouse_navigation.html" class="mw-pt-progress mw-pt-progress--low" title="Mouse Model (1% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
@@ -475,11 +475,9 @@
 <td colspan="2">Podr&#382;te lev&eacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
 <p>Alternativn&#283;, kdy&#382; je skica v re&#382;imu &uacute;prav, podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i, pot&eacute; stiskn&#283;te a podr&#382;te prav&eacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td>Hold the right mouse button, then move the pointer.
+</td>
+<td>Podr&#382;te prav&eacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
 </td></tr></tbody></table>
-
 <p><span id="Revit_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="Revit_navigace">Revit navigace</span></h3>
@@ -928,35 +926,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205057
+Cached time: 20260111205120
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.316 seconds
-Real time usage: 0.512 seconds
-Preprocessor visited node count: 1506/1000000
-Post&#8208;expand include size: 72841/2097152 bytes
-Template argument size: 27776/2097152 bytes
+CPU time usage: 0.304 seconds
+Real time usage: 0.724 seconds
+Preprocessor visited node count: 1505/1000000
+Post&#8208;expand include size: 72795/2097152 bytes
+Template argument size: 27730/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3888/5000000 bytes
+Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  123.718      1 -total
- 11.96%   14.792      1 Template:OpenSCAD_Navigation
- 10.13%   12.529      8 Template:ASCII
-  7.81%    9.668      1 Template:Userdocnavi/cs
-  6.72%    8.313      1 Template:SiemensNX_Navigation
-  5.48%    6.781      1 Template:TinkerCAD_Navigation
-  5.31%    6.573      1 Template:SolidWorks_Navigation
-  5.25%    6.491      1 Template:OpenInventor_Navigation
-  5.24%    6.488      1 Template:Blender_Navigation
-  4.41%    5.457      1 Template:CAD_Navigation
+100.00%  147.414      1 -total
+ 12.27%   18.092      1 Template:Gesture_Navigation
+ 11.22%   16.543      8 Template:ASCII
+ 10.55%   15.556      1 Template:Userdocnavi/cs
+  9.02%   13.298      1 Template:SolidWorks_Navigation
+  8.71%   12.833     69 Template:KEY
+  6.51%    9.597      1 Template:TinkerCAD_Navigation
+  6.00%    8.846      1 Template:Touchpad_Navigation/cs
+  5.68%    8.369      1 Template:OpenSCAD_Navigation
+  5.22%    7.688      1 Template:Blender_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205056 and revision id 1736169. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205119 and revision id 1736173. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
