--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -480,7 +480,7 @@
 </td></tr></tbody></table>
 <p><span id="Revit_navigation"></span>
 </p>
-<h3><span class="mw-headline" id="Revit_navigace">Revit navigace</span></h3>
+<h3><span class="mw-headline" id="Navigace_Revit">Navigace Revit</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The Revit navigation style was modeled after <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Autodesk_Revit">Revit</a>.
 </p>
@@ -926,12 +926,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205120
+Cached time: 20260111205133
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.304 seconds
-Real time usage: 0.724 seconds
+CPU time usage: 0.346 seconds
+Real time usage: 0.490 seconds
 Preprocessor visited node count: 1505/1000000
 Post&#8208;expand include size: 72795/2097152 bytes
 Template argument size: 27730/2097152 bytes
@@ -942,19 +942,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  147.414      1 -total
- 12.27%   18.092      1 Template:Gesture_Navigation
- 11.22%   16.543      8 Template:ASCII
- 10.55%   15.556      1 Template:Userdocnavi/cs
-  9.02%   13.298      1 Template:SolidWorks_Navigation
-  8.71%   12.833     69 Template:KEY
-  6.51%    9.597      1 Template:TinkerCAD_Navigation
-  6.00%    8.846      1 Template:Touchpad_Navigation/cs
-  5.68%    8.369      1 Template:OpenSCAD_Navigation
-  5.22%    7.688      1 Template:Blender_Navigation
+100.00%   97.193      1 -total
+ 11.57%   11.243      8 Template:ASCII
+  7.75%    7.530      1 Template:Userdocnavi/cs
+  6.82%    6.631      1 Template:OpenCascade_Navigation
+  6.55%    6.363      1 Template:Blender_Navigation
+  5.89%    5.721      1 Template:Gesture_Navigation
+  5.55%    5.391      1 Template:MayaGesture_Navigation
+  5.50%    5.343      1 Template:CAD_Navigation
+  5.39%    5.241      2 Template:Version
+  5.31%    5.158      1 Template:OpenSCAD_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205119 and revision id 1736173. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205132 and revision id 1736177. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
