--- a/wiki/de/TechDraw_Midpoints.html
+++ b/wiki/de/TechDraw_Midpoints.html
@@ -58,7 +58,7 @@
 <p>Das Werkzeug <b>TechDraw Mittenpunkte</b> f&uuml;gt einer oder mehreren Kanten einen <a href="../de/TechDraw_CosmeticVertex.html" title="TechDraw CosmeticVertex/de">Hilfspunkt</a> auf halber L&auml;nge hinzu.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticMidpoint_Sample.png&amp;filetimestamp=20190521120456&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticMidpoint_Sample.png" decoding="async" width="250" height="231" class="mw-file-element" data-file-width="384" data-file-height="355"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Hilfspunkte an Kantenmittenpunkten</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Hilfspunkte am Mittelpunkt der Kanten</p>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
@@ -135,15 +135,15 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205121
+Cached time: 20260111205203
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.084 seconds
-Real time usage: 0.287 seconds
+CPU time usage: 0.083 seconds
+Real time usage: 0.159 seconds
 Preprocessor visited node count: 337/1000000
-Post&#8208;expand include size: 27748/2097152 bytes
-Template argument size: 10975/2097152 bytes
+Post&#8208;expand include size: 27754/2097152 bytes
+Template argument size: 10978/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -151,19 +151,19 @@ Unstrip post&#8208;expand size: 2243/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   73.855      1 -total
- 36.17%   26.717      1 Template:TechDraw_Tools_navi/de
- 17.06%   12.599      2 Template:Docnav/de
- 10.78%    7.963      1 Template:GuiCommand/de
- 10.59%    7.824      2 Template:Navigation_menu_2
- 10.00%    7.389      1 Template:Version/de
-  6.63%    4.899      1 Template:Userdocnavi/de
-  3.93%    2.903      1 Template:Code
-  3.11%    2.298      1 Template:Caption
-  2.80%    2.065      1 Template:Clear
+100.00%   38.060      1 -total
+ 30.69%   11.680      2 Template:Docnav/de
+ 17.22%    6.555      1 Template:TechDraw_Tools_navi/de
+ 10.92%    4.156      1 Template:GuiCommand/de
+  9.83%    3.741      2 Template:Navigation_menu_2
+  8.93%    3.397      1 Template:Caption
+  5.55%    2.111      1 Template:Version/de
+  5.36%    2.040      1 Template:Code
+  4.86%    1.849      1 Template:Userdocnavi/de
+  4.32%    1.643      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177743-0!canonical and timestamp 20260111205120 and revision id 1736175. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177743-0!canonical and timestamp 20260111205203 and revision id 1736179. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
