Created page with "Styl navigace Revit byl vytvořen podle [https://en.wikipedia.org/wiki/Autodesk_Revit Revit]."

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -481,10 +481,8 @@
 <p><span id="Revit_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="Navigace_Revit">Navigace Revit</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The Revit navigation style was modeled after <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Autodesk_Revit">Revit</a>.
+<p>Styl navigace Revit byl vytvo&#345;en podle <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Autodesk_Revit">Revit</a>.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="mousemodel" style="border-style:solid; border-width:1px; border-color:#aaaaaa; padding:1px; border-spacing:18px 0px; width:100%;">
 <tbody><tr>
@@ -926,13 +924,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205133
+Cached time: 20260111205209
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.346 seconds
-Real time usage: 0.490 seconds
-Preprocessor visited node count: 1505/1000000
+CPU time usage: 0.341 seconds
+Real time usage: 1.113 seconds
+Preprocessor visited node count: 1504/1000000
 Post&#8208;expand include size: 72795/2097152 bytes
 Template argument size: 27730/2097152 bytes
 Highest expansion depth: 7/100
@@ -942,19 +940,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   97.193      1 -total
- 11.57%   11.243      8 Template:ASCII
-  7.75%    7.530      1 Template:Userdocnavi/cs
-  6.82%    6.631      1 Template:OpenCascade_Navigation
-  6.55%    6.363      1 Template:Blender_Navigation
-  5.89%    5.721      1 Template:Gesture_Navigation
-  5.55%    5.391      1 Template:MayaGesture_Navigation
-  5.50%    5.343      1 Template:CAD_Navigation
-  5.39%    5.241      2 Template:Version
-  5.31%    5.158      1 Template:OpenSCAD_Navigation
+100.00%  305.820      1 -total
+ 13.00%   39.761      1 Template:SolidWorks_Navigation
+ 12.57%   38.446      1 Template:Userdocnavi/cs
+ 11.30%   34.549      1 Template:MayaGesture_Navigation
+ 10.32%   31.566      8 Template:ASCII
+ 10.20%   31.204      1 Template:OpenSCAD_Navigation
+  6.32%   19.320      1 Template:VersionMinus
+  6.05%   18.503      1 Template:SiemensNX_Navigation
+  5.54%   16.951      1 Template:Revit_Navigation
+  4.92%   15.037      2 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205132 and revision id 1736177. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205207 and revision id 1736181. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
