Updated page TechDraw Workbench/de

--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -55,7 +55,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_RedrawPage.svg&amp;filetimestamp=20240710133133&amp;.html" class="mw-file-description"><img src="../File/TechDraw_RedrawPage.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_RedrawPage.html" title="TechDraw RedrawPage/de">Blatt neu zeichnen</a>: Erzwingt eine Aktualisierung des ausgew&auml;hlten Zeichnungsblattes.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_PrintAll.svg&amp;filetimestamp=20240710132618&amp;.html" class="mw-file-description"><img src="../File/TechDraw_PrintAll.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_PrintAll.html" title="TechDraw PrintAll/de">Alle Bl&auml;tter drucken</a>: Druckt alle Zeichnungsbl&auml;tter eines Dokuments. <span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExportPageSVG.svg&amp;filetimestamp=20240708192017&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExportPageSVG.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExportPageSVG.html" title="TechDraw ExportPageSVG/de">Blatt als SVG-Datei exportieren</a>: Speichert die aktuelle Seite als <a href="../de/SVG.html" title="SVG/de">SVG</a>-Datei.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExportPageDXF.svg&amp;filetimestamp=20240708191933&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExportPageDXF.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExportPageDXF.html" title="TechDraw ExportPageDXF/de">Seite als DXF-Datei exportieren</a>: speichert die aktuelle Seite als <a href="../de/DXF.html" title="DXF/de">DXF</a>-Datei.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExportPageDXF.svg&amp;filetimestamp=20240708191933&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExportPageDXF.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExportPageDXF.html" title="TechDraw ExportPageDXF/de">Blatt als DXF-Datei exportieren</a>: speichert das aktuelle Zeichnungsblatt als <a href="../de/DXF.html" title="DXF/de">DXF</a>-Datei.</li></ul>
 <p><span id="TechDraw_Views"></span>
 </p>
 <h4><span class="mw-headline" id="TechDraw-Ansichten">TechDraw-Ansichten</span></h4>
@@ -291,12 +291,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205110
+Cached time: 20260111205216
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.303 seconds
-Real time usage: 0.597 seconds
+CPU time usage: 0.368 seconds
+Real time usage: 0.922 seconds
 Preprocessor visited node count: 870/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
@@ -307,18 +307,18 @@ Unstrip post&#8208;expand size: 4462/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   54.023      1 -total
- 37.78%   20.408      1 Template:TechDraw_Tools_navi/de
- 18.21%    9.840      1 Template:Userdocnavi/de
- 11.86%    6.408      2 Template:Navigation_menu_2
- 10.09%    5.451     25 Template:Version/de
-  9.96%    5.381      2 Template:Docnav/de
-  7.64%    4.125      1 Template:TOCright
-  5.86%    3.166      5 Template:VersionPlus/de
-  4.70%    2.540      1 Template:KEY
+100.00%   63.049      1 -total
+ 27.95%   17.620      1 Template:TechDraw_Tools_navi/de
+ 17.50%   11.034      2 Template:Navigation_menu_2
+ 16.83%   10.610      1 Template:Userdocnavi/de
+ 12.95%    8.165     25 Template:Version/de
+ 10.86%    6.849      5 Template:VersionPlus/de
+ 10.68%    6.731      1 Template:KEY
+  7.64%    4.818      2 Template:Docnav/de
+  7.39%    4.659      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111205109 and revision id 1736171. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111205215 and revision id 1736183. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
