--- a/wiki/de/TechDraw_Midpoints.html
+++ b/wiki/de/TechDraw_Midpoints.html
@@ -62,12 +62,10 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Eine oder mehrere Kanten in einer Ansicht ausw&auml;hlen.</li>
 <li>Es gibt mehrere M&ouml;glichkeiten, das Werkzeug aufzurufen:
-<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_Midpoints.svg&amp;filetimestamp=20240710132001&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../TechDraw_Midpoints.html" title="TechDraw Midpoints">Kantenmittelpunkte hinzuf&uuml;gen</a> </span> dr&uuml;cken.</li>
-<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Knoten hinzuf&uuml;gen &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_Midpoints.svg&amp;filetimestamp=20240710132001&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Kantenmittelpunkte hinzuf&uuml;gen</b> ausw&auml;hlen.</li></ul></li></ol>
-</div>
+<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_Midpoints.svg&amp;filetimestamp=20240710132001&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../TechDraw_Midpoints.html" title="TechDraw Midpoints">Kantenmittelpunkte</a> </span> dr&uuml;cken.</li>
+<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Knoten hinzuf&uuml;gen &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_Midpoints.svg&amp;filetimestamp=20240710132001&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Midpoints.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Kantenmittelpunkte</b> ausw&auml;hlen.</li></ul></li></ol>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Hinweise">Hinweise</span></h2>
@@ -135,15 +133,15 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205203
+Cached time: 20260111205231
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.083 seconds
-Real time usage: 0.159 seconds
-Preprocessor visited node count: 337/1000000
-Post&#8208;expand include size: 27754/2097152 bytes
-Template argument size: 10978/2097152 bytes
+CPU time usage: 0.086 seconds
+Real time usage: 0.157 seconds
+Preprocessor visited node count: 336/1000000
+Post&#8208;expand include size: 27730/2097152 bytes
+Template argument size: 10954/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -151,19 +149,19 @@ Unstrip post&#8208;expand size: 2243/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.060      1 -total
- 30.69%   11.680      2 Template:Docnav/de
- 17.22%    6.555      1 Template:TechDraw_Tools_navi/de
- 10.92%    4.156      1 Template:GuiCommand/de
-  9.83%    3.741      2 Template:Navigation_menu_2
-  8.93%    3.397      1 Template:Caption
-  5.55%    2.111      1 Template:Version/de
-  5.36%    2.040      1 Template:Code
-  4.86%    1.849      1 Template:Userdocnavi/de
-  4.32%    1.643      1 Template:Button
+100.00%   32.559      1 -total
+ 22.36%    7.281      1 Template:TechDraw_Tools_navi/de
+ 15.52%    5.054      1 Template:GuiCommand/de
+ 13.12%    4.273      2 Template:Navigation_menu_2
+  9.80%    3.191      1 Template:Userdocnavi/de
+  9.58%    3.118      2 Template:Docnav/de
+  7.87%    2.563      1 Template:Version/de
+  7.49%    2.438      1 Template:Code
+  6.95%    2.264      1 Template:Caption
+  5.13%    1.670      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177743-0!canonical and timestamp 20260111205203 and revision id 1736179. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177743-0!canonical and timestamp 20260111205230 and revision id 1736185. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
