--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -54,7 +54,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_FillTemplateFields.svg&amp;filetimestamp=20240708195027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FillTemplateFields.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_FillTemplateFields.html" title="TechDraw FillTemplateFields/de">Vorlagenfelder aktualisieren</a>: F&uuml;llt Vorlagenfelder automatisch mit Dokumentinformationen <span style="font-size:small;"><a href="../de/Release_notes_1.0.html" title="Release notes 1.0/de">eingef&uuml;hrt in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_RedrawPage.svg&amp;filetimestamp=20240710133133&amp;.html" class="mw-file-description"><img src="../File/TechDraw_RedrawPage.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_RedrawPage.html" title="TechDraw RedrawPage/de">Blatt neu zeichnen</a>: Erzwingt eine Aktualisierung des ausgew&auml;hlten Zeichnungsblattes.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_PrintAll.svg&amp;filetimestamp=20240710132618&amp;.html" class="mw-file-description"><img src="../File/TechDraw_PrintAll.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_PrintAll.html" title="TechDraw PrintAll/de">Alle Bl&auml;tter drucken</a>: Druckt alle Zeichnungsbl&auml;tter eines Dokuments. <span style="font-size:small;"><a href="../de/Release_notes_0.21.html" title="Release notes 0.21/de">eingef&uuml;hrt in 0.21</a></span></li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExportPageSVG.svg&amp;filetimestamp=20240708192017&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExportPageSVG.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExportPageSVG.html" title="TechDraw ExportPageSVG/de">Blatt als SVG-Datei exportieren</a>: Speichert die aktuelle Seite als <a href="../de/SVG.html" title="SVG/de">SVG</a>-Datei.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExportPageSVG.svg&amp;filetimestamp=20240708192017&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExportPageSVG.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExportPageSVG.html" title="TechDraw ExportPageSVG/de">Blatt als SVG-Datei exportieren</a>: Speichert das aktuelle Zeichnungsblatt als <a href="../de/SVG.html" title="SVG/de">SVG</a>-Datei.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExportPageDXF.svg&amp;filetimestamp=20240708191933&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExportPageDXF.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExportPageDXF.html" title="TechDraw ExportPageDXF/de">Blatt als DXF-Datei exportieren</a>: speichert das aktuelle Zeichnungsblatt als <a href="../de/DXF.html" title="DXF/de">DXF</a>-Datei.</li></ul>
 <p><span id="TechDraw_Views"></span>
 </p>
@@ -291,12 +291,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205216
+Cached time: 20260111205234
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.368 seconds
-Real time usage: 0.922 seconds
+CPU time usage: 0.283 seconds
+Real time usage: 0.649 seconds
 Preprocessor visited node count: 870/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
@@ -307,18 +307,18 @@ Unstrip post&#8208;expand size: 4462/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   63.049      1 -total
- 27.95%   17.620      1 Template:TechDraw_Tools_navi/de
- 17.50%   11.034      2 Template:Navigation_menu_2
- 16.83%   10.610      1 Template:Userdocnavi/de
- 12.95%    8.165     25 Template:Version/de
- 10.86%    6.849      5 Template:VersionPlus/de
- 10.68%    6.731      1 Template:KEY
-  7.64%    4.818      2 Template:Docnav/de
-  7.39%    4.659      1 Template:TOCright
+100.00%   66.747      1 -total
+ 23.41%   15.625      5 Template:VersionPlus/de
+ 20.86%   13.926      1 Template:KEY
+ 18.69%   12.476      1 Template:TechDraw_Tools_navi/de
+ 11.16%    7.449      2 Template:Docnav/de
+  9.01%    6.014     25 Template:Version/de
+  5.87%    3.918      2 Template:Navigation_menu_2
+  5.75%    3.839      1 Template:TOCright
+  3.11%    2.074      1 Template:Userdocnavi/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111205215 and revision id 1736183. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111205233 and revision id 1736187. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
