Created page with "{{Revit_Navigation |Select_name=Výběr |Zoom_name=Zoom |Rotate_view_name=Rotace pohledu |Pan_name=Posun pohledu"

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -483,19 +483,16 @@
 <h3><span class="mw-headline" id="Navigace_Revit">Navigace Revit</span></h3>
 <p>Styl navigace Revit byl vytvo&#345;en podle <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Autodesk_Revit">Revit</a>.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="mousemodel" style="border-style:solid; border-width:1px; border-color:#aaaaaa; padding:1px; border-spacing:18px 0px; width:100%;">
 <tbody><tr>
-<th style="width:25%; background: #ededff; padding:2px 2px;">Select
+<th style="width:25%; background: #ededff; padding:2px 2px;">V&yacute;b&#283;r
 </th>
 <th style="width:25%; background: #ededff; padding:2px 2px;">Zoom
 </th>
-<th colspan="2" style="width:25%; background: #ededff; padding:2px 2px;">Rotate view
+<th colspan="2" style="width:25%; background: #ededff; padding:2px 2px;">Rotace pohledu
 </th>
-<th colspan="2" style="width:25%; background: #ededff; padding:2px 2px;">Pan
-
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></th></tr>
+<th colspan="2" style="width:25%; background: #ededff; padding:2px 2px;">Posun pohledu
+</th></tr>
 <tr style="text-align:center;">
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Hand_cursor.png&amp;filetimestamp=20240917104542&amp;.html" class="mw-file-description"><img src="../File/Hand_cursor.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="24" data-file-height="24"></a></span>
 </td>
@@ -511,7 +508,6 @@
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_rotate.svg&amp;filetimestamp=20181210192821&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_rotate.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </td>
 <td style="width:12%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </div></td>
 <td style="width:12%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB%2BRMB_hold.svg&amp;filetimestamp=20181210192958&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB%2BRMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
@@ -547,7 +543,7 @@
 <p>Alternatively, hold both left and right mouse buttons, then move the pointer.
 </p>
 </div></td></tr></tbody></table>
-</div>
+
 <p><span id="Siemens_NX_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="Siemens_NX_navigace">Siemens NX navigace</span></h3>
@@ -924,15 +920,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205209
+Cached time: 20260111205242
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.341 seconds
-Real time usage: 1.113 seconds
-Preprocessor visited node count: 1504/1000000
-Post&#8208;expand include size: 72795/2097152 bytes
-Template argument size: 27730/2097152 bytes
+CPU time usage: 0.273 seconds
+Real time usage: 0.527 seconds
+Preprocessor visited node count: 1502/1000000
+Post&#8208;expand include size: 72745/2097152 bytes
+Template argument size: 27680/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -940,19 +936,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  305.820      1 -total
- 13.00%   39.761      1 Template:SolidWorks_Navigation
- 12.57%   38.446      1 Template:Userdocnavi/cs
- 11.30%   34.549      1 Template:MayaGesture_Navigation
- 10.32%   31.566      8 Template:ASCII
- 10.20%   31.204      1 Template:OpenSCAD_Navigation
-  6.32%   19.320      1 Template:VersionMinus
-  6.05%   18.503      1 Template:SiemensNX_Navigation
-  5.54%   16.951      1 Template:Revit_Navigation
-  4.92%   15.037      2 Template:Version
+100.00%  120.427      1 -total
+ 12.87%   15.502      1 Template:Userdocnavi/cs
+ 11.75%   14.145      8 Template:ASCII
+  9.81%   11.810      1 Template:CAD_Navigation
+  8.42%   10.142      1 Template:OpenSCAD_Navigation
+  5.32%    6.409      2 Template:Version
+  4.81%    5.798      1 Template:SiemensNX_Navigation
+  4.67%    5.623      1 Template:VersionMinus
+  4.34%    5.226      1 Template:Blender_Navigation
+  4.29%    5.162      1 Template:Touchpad_Navigation/cs
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205207 and revision id 1736181. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205241 and revision id 1736191. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
