Updated page TechDraw Midpoints/de

--- a/wiki/de/TechDraw_Midpoints.html
+++ b/wiki/de/TechDraw_Midpoints.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw Midpoints/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+Midpoints&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_Midpoints.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw Midpoints (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_Midpoints.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Sommet au milieu (81% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_Midpoints.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Punti mediani (81% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -79,11 +79,8 @@
 </p>
 <h2><span class="mw-headline" id="Skripten">Skripten</span></h2>
 <p>Siehe auch: <a rel="nofollow" class="external text" href="https://freecad.github.io/SourceDoc/">Autogenerierte API-Dokumentation</a> und <a href="../de/FreeCAD_Scripting_Basics.html" title="FreeCAD Scripting Basics/de">Grundlagen der Skripterstellung in FreeCAD</a>.
+</p><p>Hilfspunkte sind zur Zeit nicht &uuml;ber <a href="../de/Macros.html" title="Macros/de">Makros</a> oder die <a href="../de/Python_Console.html" title="Python Console/de">Python-Konsole</a> erreichbar. Dieser Schnipsel entfernt alle Hilfspunkte aus der Ansicht.
 </p>
-<div class="mw-translate-fuzzy">
-<p>Hilfspunkte sind zur Zeit nicht &uuml;ber <a href="../de/Macros.html" title="Macros/de">Makros</a> oder die <a href="../de/Python.html" title="Python/de">Python</a>-Konsole erreichbar. Dieser Schnipsel entfernt alle Hilfspunkte aus der Ansicht.
-</p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">v</span> <span class="o">=</span> <span class="n">App</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">View</span>
 <span class="n">v</span><span class="o">.</span><span class="n">clearCV</span><span class="p">()</span>
 <span class="n">App</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">recompute</span><span class="p">()</span>
@@ -133,35 +130,35 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205231
+Cached time: 20260111205333
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.086 seconds
-Real time usage: 0.157 seconds
-Preprocessor visited node count: 336/1000000
+CPU time usage: 0.082 seconds
+Real time usage: 0.137 seconds
+Preprocessor visited node count: 335/1000000
 Post&#8208;expand include size: 27730/2097152 bytes
 Template argument size: 10954/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2243/5000000 bytes
+Unstrip post&#8208;expand size: 2247/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   32.559      1 -total
- 22.36%    7.281      1 Template:TechDraw_Tools_navi/de
- 15.52%    5.054      1 Template:GuiCommand/de
- 13.12%    4.273      2 Template:Navigation_menu_2
-  9.80%    3.191      1 Template:Userdocnavi/de
-  9.58%    3.118      2 Template:Docnav/de
-  7.87%    2.563      1 Template:Version/de
-  7.49%    2.438      1 Template:Code
-  6.95%    2.264      1 Template:Caption
-  5.13%    1.670      1 Template:Clear
+100.00%   32.675      1 -total
+ 25.62%    8.371      1 Template:TechDraw_Tools_navi/de
+ 12.42%    4.058      2 Template:Docnav/de
+ 11.70%    3.824      2 Template:Navigation_menu_2
+  9.65%    3.154      1 Template:GuiCommand/de
+  8.53%    2.788      1 Template:Version/de
+  8.14%    2.661      1 Template:Caption
+  7.82%    2.554      1 Template:Code
+  6.00%    1.960      1 Template:Userdocnavi/de
+  5.55%    1.814      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177743-0!canonical and timestamp 20260111205230 and revision id 1736185. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177743-0!canonical and timestamp 20260111205332 and revision id 1736195. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
