Created page with "{{Version|1.1}}"

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -533,10 +533,8 @@
 <p><span id="Siemens_NX_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="Navigace_Siemens_NX">Navigace Siemens NX</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The Siemens NX navigation style was modeled after <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Siemens_NX">Siemens NX</a>.
 </p>
@@ -906,13 +904,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205736
+Cached time: 20260111205812
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.265 seconds
-Real time usage: 0.336 seconds
-Preprocessor visited node count: 1495/1000000
+CPU time usage: 0.323 seconds
+Real time usage: 0.495 seconds
+Preprocessor visited node count: 1494/1000000
 Post&#8208;expand include size: 72454/2097152 bytes
 Template argument size: 27389/2097152 bytes
 Highest expansion depth: 7/100
@@ -922,19 +920,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   60.047      1 -total
- 16.48%    9.898      8 Template:ASCII
- 11.84%    7.110      1 Template:Blender_Navigation
-  7.57%    4.543      1 Template:Userdocnavi/cs
-  5.54%    3.327      1 Template:Touchpad_Navigation/cs
-  5.33%    3.201     69 Template:KEY
-  4.86%    2.916      1 Template:OpenSCAD_Navigation
-  4.57%    2.743      1 Template:TinkerCAD_Navigation
-  4.08%    2.452      1 Template:Touchpad_Navigation
-  4.00%    2.402      1 Template:CAD_Navigation
+100.00%  126.557      1 -total
+ 11.46%   14.499      1 Template:OpenSCAD_Navigation
+  9.65%   12.217      1 Template:Userdocnavi/cs
+  8.63%   10.924      8 Template:ASCII
+  6.39%    8.082      1 Template:Revit_Navigation
+  6.04%    7.646      1 Template:VersionMinus
+  5.46%    6.916      1 Template:Touchpad_Navigation
+  5.44%    6.890      1 Template:Touchpad_Navigation/cs
+  5.09%    6.446      1 Template:SolidWorks_Navigation
+  5.02%    6.358      1 Template:OpenInventor_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205736 and revision id 1736219. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111205811 and revision id 1736223. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
