Created page with "|Rotate_view_text=Podržte prostřední tlačítko myši a přesuňte ukazatel."

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -577,15 +577,11 @@
 </p>
 </td>
 <td>Podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td colspan="2">Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> and the middle mouse button, then move the pointer.
-
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Alternatively, hold the middle mouse button, then press and hold the right mouse button, then move the pointer.
+</td>
+<td colspan="2">Podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> a prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
+<p>Alternativn&#283; podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i, pot&eacute; stiskn&#283;te a podr&#382;te prav&eacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
 </p>
-</div></td></tr></tbody></table>
-
+</td></tr></tbody></table>
 <p><span id="SolidWorks_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="SolidWorks_navigace">SolidWorks navigace</span></h3>
@@ -886,15 +882,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210135
+Cached time: 20260111210223
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.304 seconds
-Real time usage: 0.511 seconds
-Preprocessor visited node count: 1486/1000000
-Post&#8208;expand include size: 72191/2097152 bytes
-Template argument size: 27126/2097152 bytes
+CPU time usage: 0.326 seconds
+Real time usage: 0.712 seconds
+Preprocessor visited node count: 1484/1000000
+Post&#8208;expand include size: 72124/2097152 bytes
+Template argument size: 27059/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -902,19 +898,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   92.491      1 -total
-  9.34%    8.643      8 Template:ASCII
-  9.14%    8.456      1 Template:OpenSCAD_Navigation
-  8.39%    7.758      1 Template:Userdocnavi/cs
-  6.85%    6.340      1 Template:Gesture_Navigation
-  6.63%    6.133      1 Template:Touchpad_Navigation
-  5.69%    5.263      1 Template:CAD_Navigation
-  5.16%    4.774      1 Template:Touchpad_Navigation/cs
-  4.90%    4.532      1 Template:SolidWorks_Navigation
-  4.81%    4.452      1 Template:MayaGesture_Navigation
+100.00%  175.160      1 -total
+ 13.12%   22.982      8 Template:ASCII
+  8.60%   15.066      1 Template:OpenCascade_Navigation
+  7.95%   13.924      1 Template:Userdocnavi/cs
+  7.55%   13.227      1 Template:Touchpad_Navigation
+  5.42%    9.486      1 Template:MayaGesture_Navigation
+  5.32%    9.313      2 Template:Version
+  4.44%    7.779      1 Template:Gesture_Navigation
+  4.40%    7.701     69 Template:KEY
+  4.25%    7.448      1 Template:CAD_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111210134 and revision id 1736291. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111210223 and revision id 1736306. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
